func_gconcat.result, func_gconcat.test:   Added test cases for bug #12863. item_sum.cc, item_sum.h:   Fixed bug #12863.   Added a flag to Item_func_group_concat set to FALSE after   concatenation of the first element of a group.